# Chepgram

./: CMakeLists.txt  Chepgram.cpp  Chepgram.h
src/client/: Authorization.cpp  Authorization.h  Client.cbp  Client.layout  ClientApp.cpp  ClientApp.h  ClientMain.cpp  ClientMain.h  MainFrame.cpp  MainFrame.h  NewClient.cpp  RCa28756  client.cpp  client.h  messagePanel.h
src/client/wxsmith/: Authorization.wxs  Clientframe.wxs
src/db/: Database.cpp  Database.h
src/server/: Chepgram.cpp  Chepgram.h  TcpServer.h
